Phase 1 stabilization: index-based artifact selection, markdown stripping, deterministic patching pipeline, FSM repair lifecycle, execution hardening